defined basic style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="html css js base">
   <link rel="icon" href="favicon.png" />
   <link rel="apple-touch-icon" href="favicon.png" />
+  <link rel="stylesheet" href="styles.css">
 
   <title>HTML CSS JS base</title>
 
@@ -16,10 +17,34 @@
 
   <header>
     <h1>Hugo Award for Best Novel</h1>
-
-
   </header>
-
+  <article>
+    <header>
+      <h2>Lorem ipsum dolor sit amet</h2>
+    </header>
+    <p class="lede call-out" id="feature">
+      The Hugo Award for Best Novel is one of the Hugo Awards given each year for
+      science fiction or fantasy stories published
+      in, or translated to, English during the previous calendar year. The novel award is available for works of fiction
+      of
+      40,000 words or more; awards are also given out in the short story, novelette, and novella categories. The Hugo
+      Awards
+      have been described as "a fine showcase for speculative fiction", and "the best known literary award for science
+      fiction
+      writing".
+    </p>
+    <p class="call-out">
+      The Hugo Award for Best Novel has been awarded annually by the World Science Fiction Society since 1953, except in
+      1954
+      and 1957. In addition, beginning in 1996, Retrospective Hugo Awards or "Retro-Hugos" have been available for works
+      published 50, 75, or 100 years prior. Retro-Hugos may only be awarded for years after 1939 in which no awards were
+      originally given.[3] To date, Retro-Hugo awards have been given for novels for 1939, 1941, 1943–1946, 1951, and
+      1954.[4]
+    </p>
+  </article>
+  <footer>
+    <p>Made by me 2023</p>
+  </footer>
 </body>
 
 </html>
