--- a/article.html
+++ b/article.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="An article about travel and tourism-related services">
     <link rel="apple-touch-icon" href="icon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Travely | Article</title>
 </head>
 
@@ -14,7 +17,7 @@
         <header>
             <section>
                 <img src="assets/icons/book.svg" alt="Open book" width="24">
-                <h1>Readible</h1>
+                <p>Readible</p>
             </section>
             <nav>
                 <ul>
